--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 PORT=5000
-MONGODB_URI=mongodb://localhost:27017/habittracker
+MONGODB_URI= mongodb+srv://krishmakadiya2005:tysl8201X2vWHzNn@cluster0.xosk58x.mongodb.net/
 JWT_SECRET=your_jwt_secret_key_here_change_in_production
 NODE_ENV=development
 CLIENT_URL=http://localhost:5173
